CPD-62 Remove old class in cp-analyzer
